# IG

./: .dockerignore  .gitignore  README.md  package-lock.json
.devcontainer/: devcontainer.json
IG-view/: analize.ipynb
front/: .env.development  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
scraper/: Dockerfile  fly.toml  main.py  pyproject.toml  requirements.txt  samconfig.toml  site_downloader.py  template.yaml
scraper/config/: logging_config.py
scraper/cookies/: collect_cookies.py  load_cookies.py
scraper/database/: __init__.py  connection.py  gap.py
scraper/database/operations/: imagens.py  precos.py  produtos.py  utils.py
scraper/images/: bulk_image_links.py  image_downloader.py  image_link_extractor.py
scraper/network/: request.py  request_async.py  stop_machine.py
scraper/script/: proseses_backlog.py
scraper/src/: main.py  requirements.txt  site_downloader.py
scraper/src/config/: logging_config.py
scraper/src/cookies/: collect_cookies.py  load_cookies.py
scraper/src/database/: connection.py  models.py
scraper/src/database/operations/: cidades.py  disponibilidade.py  precos.py  produtos.py  utils.py
scraper/src/images/: bulk_image_links.py  image_downloader.py
scraper/src/network/: request.py  request_async.py
scraper/src/utils/: data.py
scraper/utils/: categories.py
supabase/: config.toml
view/: Dashboard.py  analize.ipynb  filters.py  load_data.py  main.py  pyproject.toml  requirements.txt  sidebar.py  utils.py
view/database/: connection.py
view/pages/: Dados Brutos.py
(+32 files in other folders)
