[project]
name = "view"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.46.0",
    "supabase>=2.15.3",
]

[dependency-groups]
dev = [
    "jupter>=0.1.0",
]
